# is-vowel

./: Cargo.toml  README.md  README.tpl
.github/workflows/: main.yml
src/: lib.rs
