[package]
name = "is-vowel"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"
description = "Heuristically test whether a character is a vowel letter"
license = "MIT"
repository = "https://github.com/BartMassey/is-vowel"
readme = "README.md"
categories = ["text-processing"]

[dependencies]
once_cell = "1.7.2"
unicode-normalization = "0.1.17"

[dev-dependencies]
version-sync = "0.9"

[badges.maintenance]
status = "actively-developed"
